discussion/kv_engine/175331/175331_rev12_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Cancel RangeScan that exceed some duration

A RangeScan cannot 'exist' indefinitely as storage cannot be released by
compaction. This commit adds a watch-dog task that is responsible
for 'force' cancelling any RangeScan that exists for longer than some
configuration defined duration (180 seconds by default).

This commit makes no attempt to allow a scan to complete even if it so
close to the end, when the time is up, the scan is cancelled. If the
scan is being continued at the time of cancellcation, a
RangeScanCancelled status is seen.

Change-Id: I409b00ab08772fa36af8f2fad83c0b083fe26165

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-06-23 12:19:02.000000000
Message: 
Uploaded patch set 12.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-23 12:44:44.000000000
Message: 
Patch Set 12: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46999/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\range_scan_test.cc(1500): error C2512: "ReadyRangeScans": no appropriate default constructor available ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46999/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18255/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1500:5: error: constructor for "RangeScanOwnerTest" must explicitly initialize the member "readyScans" which does not have a default constructor [clang-diagnostic-error]
    RangeScanOwnerTest() : rangeScans(&readyScans) {
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1512:21: note: member is declared here
    ReadyRangeScans readyScans;
                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_owner.h:36:7: note: "ReadyRangeScans" declared here
class ReadyRangeScans {
      ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/unique_ptr.h:962:34: error: no matching constructor for initialization of "DummyRangeScanHandler" [clang-diagnostic-error]
    { return unique_ptr<_Tp>(new _Tp(std::forward<_Args>(__args)...)); }
                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1407:34: note: in instantiation of function template specialization "std::make_unique<DummyRangeScanHandler>" requested here
                            std::make_unique<DummyRangeScanHandler>());
                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1218:5: note: candidate constructor not viable: requires single argument "callbackCounter", but no arguments were provided
    DummyRangeScanHandler(size_t& callbackCounter)
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1216:7: note: candidate constructor (the implicit copy constructor) not viable: requires 1 argument, but 0 were provided
class DummyRangeScanHandler : public RangeScanDataHandlerIFace {
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1216:7: note: candidate constructor (the implicit move constructor) not viable: requires 1 argument, but 0 were provided

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18255/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1500:5:
error: constructor for "RangeScanOwnerTest" must explicitly initialize the member "readyScans" which does not have a default constructor [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18255/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8026/ : FAILURE

Compile error at [2022-06-23T12:27:12.901Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1500:50:
error: no matching function for call to ?ReadyRangeScans::ReadyRangeScans()?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8026/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19340/ : FAILURE

Compile error at [2022-06-23T12:32:32.517Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1500:5:
error: constructor for "RangeScanOwnerTest" must explicitly initialize the member "readyScans" which does not have a default constructor
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19340/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7924/ : FAILURE

Compile error at [2022-06-23T12:37:19.462Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1500:5:
error: constructor for "RangeScanOwnerTest" must explicitly initialize the member "readyScans" which does not have a default constructor
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7924/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20121/ : FAILURE

Compile error at [2022-06-23T12:35:11.552Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1500:50:
error: no matching function for call to ?ReadyRangeScans::ReadyRangeScans()?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20121/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20468/ : FAILURE

Compile error at [2022-06-23T12:33:03.760Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1500:50:
error: no matching function for call to ?ReadyRangeScans::ReadyRangeScans()?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20468/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28502/ : FAILURE

Compile error at [2022-06-23T12:43:56.124Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1500:5:
error: constructor for "RangeScanOwnerTest" must explicitly initialize the member "readyScans" which does not have a default constructor
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28502/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21117/ : FAILURE

Compile error at [2022-06-23T12:39:07.754Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1500:5:
error: constructor for "RangeScanOwnerTest" must explicitly initialize the member "readyScans" which does not have a default constructor
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21117/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17379/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39475/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
